# images-gallery

./: .gitignore  docker-compose.yml
api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
api/src/: main.py  mongo_client.py
api/tests/: test_main.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Header.js  ImageCard.js  SearchBar.js  Spinner.js  Welcome.js
